Fix default spacing of sections within columns
Fix default spacing of section elements that are children of WSUWP builder template columns.

--- a/columns.less
+++ b/columns.less
@@ -40,8 +40,9 @@
 
 		section {
 			position: relative;
-			&+section:not(.no-top-margin) {
-				margin-top: @v-dflt-spcng;
+
+			* + & {
+				margin-top: extract(@mSize-array, @mSize-1000mx);
 			}
 		}
 
